# C-Codes

./: AvgModule.cpp  AvgModule.pyd  HelloWorld main.cpp  class 1.cpp  class2.cpp  plot.cpp  plot.gnuplot  plot_roots.gp  plot_surface.gp  temp.cpp  test.cpp  test1.cpp  test2.cpp  test3.cpp  test_avg.py
Class/: class 1.cpp  class3.cpp  class4.cpp  complex_number.cpp  i_powertower.cpp  test.cpp
For Console app of particle in E and B field/: ElectrodeConfig_2.json  ElectrodeConfig_3.json  ElectrodeConfig_4.json  config.json  particle_track_0.txt
JSON/: config.json  data.json  json_test.cpp  json_test_1.cpp  test.js
Lapack/: coupled_polynomial_solver.cpp  eigenvalue.cpp  linear_system.cpp  linear_system_2.cpp  linear_system_matrix_inverse.cpp  plot_roots.gp  polynomial_solver.cpp
Libtorch/: CMakeLists.txt
Module_test/: temp.cpp  temp1.cpp  test_complex.cpp
My_C++_modules/: complex.cpp  complex.hpp  cpp_to_python_data.cpp  matrix.cpp  np.cpp  np.hpp  python_to_CPP.cpp  test_complex.cpp
Plotting with c++/: central_force.cpp  central_limit_theorem.cpp  complex_function_plot.cpp  imshow.cpp  matplotlib_cpp.cpp  matplotlibcpp_3d.cpp  newton_fractal.cpp  newton_fractal_real_poly.cpp  plot.cpp  plot.gnuplot  plot3d.gp  plotprime.cpp  power_tower_plot.cpp  surface_plot.cpp
Simulation/: ESM.cpp  ESM_with_matplotlib_cpp.cpp  TP_with_matplotlib_cpp.cpp  Thomson_parabola.cpp  particle_in_AC_field.cpp  particle_in_EB_field.cpp  particle_inbuilt_propagator.cpp  plot_3d.gp  pyplot_with_cpp.cpp  test2.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp
c++ for python/: setup.py  (+6 more)
(+26 files in other folders)
